# odoo-rust-mcp

./: .gitignore  AGENTS.md  BASELINE.md  CHANGELOG.md  CLAUDE.md  Create-Shortcut.ps1  Create-WSL-Shortcut.ps1  Cross.toml  LICENSE  README.md  Start-MCP-Server.bat  Start-MCP-Server.ps1  Start-WSL-MCP-Server.bat  Start-WSL-MCP-Server.ps1  TECHNICAL.md  desktop-build.ps1  desktop-dev.ps1  docker-compose.override.example.yml  docker-compose.yml  dotenv.example  mcp_test.py  start.sh  validate_output.txt
.agentkanban/: board.yaml  memory.md
.agentkanban/prompts/: README.md  goal-decompose.md  new-task-intake.md  production-readiness-audit.md  stage-backlog-to-in-progress.md  stage-blocked-and-resume.md  stage-in-progress-to-done.md  work-on-task.md
.agentkanban/tasks/: task_001_implement_repository_local_sdd_workflow.md  task_002_refine_instances_card_and_table_views.md  task_003_rewrite_config_ui_with_mantine.md  task_004_refine_config_ui_minimalist.md  task_005_debold_ui_and_soften_code_identifiers.md  task_006_refine_readme_install_shortcuts_and_screenshots.md  task_007_add_version_to_ui_footer.md  task_008_fix_ci_failures_on_pr_1.md  task_008_windows_tauri_desktop_foundation.md  task_009_add_github_cli_to_workflow.md  task_009_windows_tauri_sidecar_lifecycle.md  task_010_windows_tauri_native_shell_controls.md  task_011_windows_tauri_release_packaging.md  task_012_windows_tauri_docs_validation.md  task_013_instance_bulk_delete_and_error_cleanup.md  task_014_windows_tauri_desktop_app_program.md  task_015_deploy_windows_tauri_app_to_github.md  task_016_desktop_app_mcp_client_connectivity.md  task_017_fix_desktop_blank_window_startup.md  task_018_add_stock_inventory_reversal_cleanup_tool.md  task_019_runtime_tool_catalog_drift_import.md  task_020_enterprise_packs_diet_e2e.md  todo_006_refine_readme_install_shortcuts_and_screenshots.md  todo_018_add_stock_inventory_reversal_cleanup_tool.md
.claude/: settings.local.json
.codex-run/: index.html
.cursor/plans/: enterprise_packs_e2e_add67b91.plan.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  config-tests.yml  deploy-docs.yml  deploy-image.yml  docker.yml  install-test.yml  release.yml
.plan/odoo-rust-mcp-enterprise-packs-dev-docs/: MANIFEST.json  README.md  SUMMARY-snippet.md
apt-repo/: README.md  index.html
config/: tools.json
config-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
desktop/: .gitignore  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: book.toml
homebrew/: README.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
rust-mcp/: CONFIG_MANAGER.md  Cargo.toml  Dockerfile  README.md  build.rs  server.json
rust-mcp/config/: README.md  prompts.json  server.json  tools.json
rust-mcp/config-defaults/: prompts.json  tools.json
rust-mcp/debian/: odoo-rust-mcp-service  odoo-rust-mcp.service  postinst  rust-mcp-service  rust-mcp.service
rust-mcp/openapi/: openapi.json
rust-mcp/src/: lib.rs  main.rs
rust-mcp/src/cleanup/: database.rs  deep.rs  mod.rs  stock_inventory.rs
rust-mcp/src/config_manager/: manager.rs  mod.rs  server.rs
rust-mcp/src/mcp/: cache.rs  capability.rs  cursor_stdio.rs  http.rs  mod.rs  module_snapshot.rs  prompts.rs  registry.rs  resources.rs  runtime.rs  tools.rs
rust-mcp/src/odoo/: client.rs  config.rs  legacy_client.rs  mod.rs  types.rs  unified_client.rs
rust-mcp/static/: config-ui.html
rust-mcp/tests/: cleanup_database.rs  cleanup_deep.rs  config_manager.rs  config_watcher.rs  cursor_schema.rs  http_transport.rs  mcp_cache.rs  mcp_registry.rs  mcp_resources.rs  mcp_smoke.rs  module_capabilities_live.rs  odoo_client_legacy.rs  odoo_client_modern.rs  odoo_config.rs  odoo_errors.rs  odoo_unified_client.rs  per_instance_tool_config_e2e.rs
rust-mcp/tests/common/: mod.rs
scripts/: New-AppIcon.ps1  bump-version.sh  capture-readme-screenshots.mjs  install.ps1  install.sh  release.sh
(+210 files in other folders)
