[package]
name = "odoo-rust-mcp-desktop"
version = "0.5.1"
description = "Native Windows desktop app for Odoo Rust MCP"
authors = ["milzamsz"]
edition = "2021"

[lib]
name = "odoo_rust_mcp_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
